syntax = "proto3";

package auth.proto;

option go_package = "./";

message SignUpRequest {
  string login = 1;
  string password = 2;
}

message SignUpResponse {
}

message LogInRequest {
  string login = 1;
  string password = 2;
}

message LogInResponse {
}


service AuthService {
  rpc SignUp(SignUpRequest) returns (SignUpResponse);
  rpc LogIn(LogInRequest) returns (LogInResponse);
}
